test_regress/t/t_tagged_if.out
%Error-UNSUPPORTED: t/t_tagged_if.v:16:18: Unsupported: tagged union
   16 |    typedef union tagged {
      |                  ^~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_tagged_if.v:17:7: Unsupported: void (for tagged unions)
   17 |       void Invalid;
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:22:18: Unsupported: tagged union
   22 |    typedef union tagged packed {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:23:7: Unsupported: void (for tagged unions)
   23 |       void          Invalid;
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:31:18: Unsupported: tagged union
   31 |    typedef union tagged {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:32:7: Unsupported: void (for tagged unions)
   32 |       void        Invalid;
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:38:18: Unsupported: tagged union
   38 |    typedef union tagged {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:42:13: Unsupported: tagged union
   42 |       union tagged {
      |             ^~~~~~
%Error: t/t_tagged_if.v:61:11: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   61 |       v = tagged Invalid;
      |           ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_tagged_if.v:63:35: syntax error, unexpected ')', expecting '.' or tagged or .*
   63 |       if (v matches tagged Invalid)
      |                                   ^
%Error: t/t_tagged_if.v:70:11: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   70 |       v = tagged Valid (42);
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:72:34: Unsupported: '{} tagged patterns
   72 |       if (v matches tagged Valid .n)
      |                                  ^
%Error-UNSUPPORTED: t/t_tagged_if.v:72:21: Unsupported: '{} tagged patterns
   72 |       if (v matches tagged Valid .n)
      |                     ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:72:13: Unsupported: matches operator
   72 |       if (v matches tagged Valid .n)
      |             ^~~~~~~
%Error: t/t_tagged_if.v:79:11: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   79 |       v = tagged Valid (100);
      |           ^~~~~~
%Error: t/t_tagged_if.v:81:35: syntax error, unexpected ')', expecting '.' or tagged or .*
   81 |       if (v matches tagged Invalid)
      |                                   ^
%Error: t/t_tagged_if.v:88:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   88 |       wt = tagged Wide60 (60'hFEDCBA987654321);
      |            ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:90:36: Unsupported: '{} tagged patterns
   90 |       if (wt matches tagged Wide60 .w)
      |                                    ^
%Error-UNSUPPORTED: t/t_tagged_if.v:90:22: Unsupported: '{} tagged patterns
   90 |       if (wt matches tagged Wide60 .w)
      |                      ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:90:14: Unsupported: matches operator
   90 |       if (wt matches tagged Wide60 .w)
      |              ^~~~~~~
%Error: t/t_tagged_if.v:97:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   97 |       wt = tagged Wide90 (90'hDE_ADBEEFCA_FEBABE12_3456);
      |            ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:99:36: Unsupported: '{} tagged patterns
   99 |       if (wt matches tagged Wide90 .w)
      |                                    ^
%Error-UNSUPPORTED: t/t_tagged_if.v:99:22: Unsupported: '{} tagged patterns
   99 |       if (wt matches tagged Wide90 .w)
      |                      ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:99:14: Unsupported: matches operator
   99 |       if (wt matches tagged Wide90 .w)
      |              ^~~~~~~
%Error: t/t_tagged_if.v:106:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  106 |       wt = tagged Byte8NonZeroLSB (8'hA5);
      |            ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:108:45: Unsupported: '{} tagged patterns
  108 |       if (wt matches tagged Byte8NonZeroLSB .b)
      |                                             ^
%Error-UNSUPPORTED: t/t_tagged_if.v:108:22: Unsupported: '{} tagged patterns
  108 |       if (wt matches tagged Byte8NonZeroLSB .b)
      |                      ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:108:14: Unsupported: matches operator
  108 |       if (wt matches tagged Byte8NonZeroLSB .b)
      |              ^~~~~~~
%Error: t/t_tagged_if.v:115:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  115 |       wt = tagged Word32LittleEndian (32'hDEADBEEF);
      |            ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:117:48: Unsupported: '{} tagged patterns
  117 |       if (wt matches tagged Word32LittleEndian .w)
      |                                                ^
%Error-UNSUPPORTED: t/t_tagged_if.v:117:22: Unsupported: '{} tagged patterns
  117 |       if (wt matches tagged Word32LittleEndian .w)
      |                      ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:117:14: Unsupported: matches operator
  117 |       if (wt matches tagged Word32LittleEndian .w)
      |              ^~~~~~~
%Error: t/t_tagged_if.v:124:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  124 |       at = tagged Arr '{10, 20, 30, 40};
      |            ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:126:33: Unsupported: '{} tagged patterns
  126 |       if (at matches tagged Arr .a)
      |                                 ^
%Error-UNSUPPORTED: t/t_tagged_if.v:126:22: Unsupported: '{} tagged patterns
  126 |       if (at matches tagged Arr .a)
      |                      ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:126:14: Unsupported: matches operator
  126 |       if (at matches tagged Arr .a)
      |              ^~~~~~~
%Error: t/t_tagged_if.v:133:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  133 |       at = tagged Scalar (999);
      |            ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:135:36: Unsupported: '{} tagged patterns
  135 |       if (at matches tagged Scalar .s)
      |                                    ^
%Error-UNSUPPORTED: t/t_tagged_if.v:135:22: Unsupported: '{} tagged patterns
  135 |       if (at matches tagged Scalar .s)
      |                      ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:135:14: Unsupported: matches operator
  135 |       if (at matches tagged Scalar .s)
      |              ^~~~~~~
%Error: t/t_tagged_if.v:142:15: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  142 |       instr = tagged Jmp (tagged JmpC '{2'd1, 10'd256});
      |               ^~~~~~
%Error: t/t_tagged_if.v:144:36: syntax error, unexpected '(', expecting '.' or tagged or .*
  144 |       if (instr matches tagged Jmp (tagged JmpC '{cc:.c, addr:.a}))
      |                                    ^
%Error: t/t_tagged_if.v:151:15: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  151 |       instr = tagged Jmp (tagged JmpC '{2'd2, 10'd128});
      |               ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:153:36: Unsupported: '{} tagged patterns
  153 |       if (instr matches tagged Jmp .j &&&
      |                                    ^
%Error-UNSUPPORTED: t/t_tagged_if.v:153:25: Unsupported: '{} tagged patterns
  153 |       if (instr matches tagged Jmp .j &&&
      |                         ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:153:17: Unsupported: matches operator
  153 |       if (instr matches tagged Jmp .j &&&
      |                 ^~~~~~~
%Error: t/t_tagged_if.v:154:33: syntax error, unexpected "'{", expecting '.' or tagged or .*
  154 |           j matches tagged JmpC '{cc:.c, addr:.a})
      |                                 ^~
%Error: t/t_tagged_if.v:161:11: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  161 |       v = tagged Valid (75);
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:163:34: Unsupported: '{} tagged patterns
  163 |       if (v matches tagged Valid .n &&& (n > 50))
      |                                  ^
%Error-UNSUPPORTED: t/t_tagged_if.v:163:21: Unsupported: '{} tagged patterns
  163 |       if (v matches tagged Valid .n &&& (n > 50))
      |                     ^~~~~~
%Error: Exiting due to
